--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./appIcon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -21,7 +21,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Blog App</title>
+    <title>LEGERE</title>
   </head>
   <body>
     <div id="root"></div>
